--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\nomes\AppData\Local\Programs\Python\Python313
+home = C:\Users\sopor\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
-version = 3.13.1
-executable = C:\Users\nomes\AppData\Local\Programs\Python\Python313\python.exe
-command = C:\Users\nomes\AppData\Local\Programs\Python\Python313\python.exe -m venv D:\scripts\python\cash_register_machine
+version = 3.12.7
+executable = C:\Users\sopor\AppData\Local\Programs\Python\Python312\python.exe
+command = C:\Users\sopor\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\sopor\Documents\programador_skills\script_py\cash_register
