--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\sopor\AppData\Local\Programs\Python\Python312
+home = C:\Users\gsilv\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
-version = 3.12.7
-executable = C:\Users\sopor\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\sopor\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\sopor\Documents\programador_skills\script_py\cash_register
+version = 3.12.6
+executable = C:\Users\gsilv\AppData\Local\Programs\Python\Python312\python.exe
+command = C:\Users\gsilv\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\gsilv\OneDrive\Documentos\GitHub\cash_register
